--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "morgan": "^1.10.0"
   }
 }
