--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
-    "morgan": "^1.10.0"
+    "debug": "^4.3.7",
+    "express": "^4.18.2",
+    "http-errors": "^2.0.0",
+    "morgan": "^1.10.0",
+    "sqlite3": "^5.1.7"
   }
 }
