--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.7",
+    "cloudinary": "^1.41.3",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
