--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.7",
-    "cloudinary": "^1.41.3",
     "express": "^4.18.2",
+    "express-session": "^1.18.2",
     "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "twilio": "^5.2.3"
   }
 }
