envelope credentials secreted
nu er der hemmeligheder i en envelope

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
     "sqlite3": "^5.1.7",
+    "dotenv": "^16.4.5",
     "twilio": "^5.2.3"
   }
 }
