--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "cloudinary": "^1.41.3",
+    "connect-memcached": "^1.0.0",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.7",
     "express": "^4.18.2",
