--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node ./bin/www",
-    "restart": "npm i && pm2 restart all"
+    "restart": "npm i && pm2 delete all && pm2 start ./bin/www -i 2 --name 'waitlist-app'"
   },
   "dependencies": {
     "cloudinary": "^1.41.3",
