--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
   },
   "dependencies": {
     "cloudinary": "^1.41.3",
-    "connect-memcached": "^1.0.0",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.7",
     "express": "^4.18.2",
-    "express-session": "^1.18.2",
+  "bcrypt": "^5.1.1",
     "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
     "sqlite3": "^5.1.7",
     "dotenv": "^16.4.5",
-    "twilio": "^5.2.3"
+    "twilio": "^5.2.3",
+    "jsonwebtoken": "^9.0.2"
   }
 }
