--- a/package.json
+++ b/package.json
@@ -5,31 +5,19 @@
   "main": "app.js",
   "scripts": {
     "start": "node ./bin/www",
-    "restart": "npm i && pm2 delete all && pm2 start ./bin/www -i 2 --name 'waitlist-app'",
-    "test": "jest"
+    "restart": "npm i && pm2 delete all && pm2 start ./bin/www -i 2 --name 'waitlist-app'"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.7",
-    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+  "bcrypt": "^5.1.1",
     "http-errors": "^2.0.0",
-    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "sqlite3": "^5.1.7",
+    "dotenv": "^16.4.5",
     "twilio": "^5.2.3",
-    "winston": "^3.14.0"
-  },
-  "devDependencies": {
-    "jest": "^29.7.0",
-    "supertest": "^6.3.4"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "testMatch": [
-      "**/__tests__/**/*.test.js"
-    ]
+    "jsonwebtoken": "^9.0.2"
   }
 }
